Fix JVM crash: Remove UseBiasedLocking and DumpSharedSpaces
-XX:-UseBiasedLocking was removed in Java 19 (JEP 374)
-XX:-DumpSharedSpaces was removed in Java 19

Using Java 21 runtime causes: "Unrecognized VM option 'UseBiasedLocking'"
followed by "Could not create the Java Virtual Machine"

Removed from all 4 FPS boost profiles + common flags + fast launch args.

🦝 Co-created with [Raccoon AI](https://raccoonai.tech)

Co-Authored-By: ACE <ace@raccoonai.tech>